ambari-web/app/styles/application.less
/* ... */
.add-property-window {
  .control-label {
    text-align: left;
  }
  .controls {
    margin-left: 140px;
  }
}

.table td.no-borders { border-top: none; }
.table td.error { background-color: #f2dede; }
.table td.warning { background-color: #fcf8e3; }

#config-validation-warnings {
  table {
    tbody{
      tr {
        background:#fcf8e3;
        border:1px solid #c09853;
        border-right:none;
        td {
          min-width: 150px;
          .property-message {
            font-weight: bold;
          }
          .property-description {
            font-size: 0.9em;
          }
        }
      }
    }
  }
}

#config-dependencies {
  max-height: 500px;
  overflow-y: auto;
  td {
    min-width: 120px;
  }
  td.check-box-col {
    min-width: 5px;
    width: 5px;
  }
}

.path-link {
  white-space: nowrap;
  cursor: pointer;
}

.bottom-border {
  border-bottom: 1px solid #dddddd;
}

.progress-counter {
  position: relative;
  .counters-label {
    font-weight: bold;
    left: 45%;
    position: absolute;
  }
}

.enhanced-config-tab-content {
  overflow: hidden;
  .section-layout-container {
    width: 104%; // fallback option
    width: ~"calc(100% + 40px)";
    .config-section-table {
      width: 100%;
      border-spacing: 20px;
      border-collapse: separate;
      table-layout: fixed; // for width to be equally distributed
      margin: 0 -20px;
      .config-section {
        padding: 10px;
        border: 1px solid #aaa;
        vertical-align: top;

        h4 {
          font-size: 22px;
          font-weight: 400;
        }

        h5 {
          font-size: 18px;
          font-weight: 400;
        }

        td:not(:first-of-type) {
          border-left: 2px solid #ccc; // horizontal splitter
          padding-left: 20px;
        }
        .config-subsection-table {
          width: 100%;
          height: 90%;
          border-spacing: 5px;
          border-collapse: separate;
          table-layout: fixed;
          .config-subsection {
            vertical-align: top;
          }
        }
      }
    }
  }
}

